--- a/styles/global.css
+++ b/styles/global.css
@@ -67,3 +67,10 @@ body {
         justify-content: center;
     }
 }
+
+@media (max-width: 768px) {
+    .html {
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+}
